2014-05-31  Darin Adler  <darin@apple.com>

        Viewport percentage tests that resize the viewport are flaky
        https://bugs.webkit.org/show_bug.cgi?id=133351

        Reviewed by Anders Carlsson.

        * css3/viewport-percentage-lengths/resources/resize-test.js:
        Added code to compensate for the difference between innerWidth/Height and outerWidth/Height
        so this works well in a browser window. Added code to "warm up" so the first resize triggers
        a resize event. Tweaked style of the code a bit. Use resize events to avoid flakiness due
        to race conditions. One thing I did not fix is the "out of order" problem where all the
        test results get written out after the words TEST COMPLETE.

        * css3/viewport-percentage-lengths/viewport-percentage-lengths-anonymous-block-expected.txt:
        Updated due to changes to the underlying test machinery, and also to show actual expected success.
        The old results said PASS with various obviously wrong results.

        * css3/viewport-percentage-lengths/viewport-percentage-lengths-anonymous-block.html:
        Changed this test to use the shared resize-test.js.

        * css3/viewport-percentage-lengths/viewport-percentage-lengths-percent-size-child-expected.txt:
        Updated due to changes to the underlying test machinery, and also to show actual expected success.
        The old results said PASS with various obviously wrong results.

        * css3/viewport-percentage-lengths/viewport-percentage-lengths-percent-size-child.html:
        Streamlined this test a little.

        * css3/viewport-percentage-lengths/viewport-percentage-lengths-relative-font-size-expected.txt:
        Updated due to changes to the underlying test machinery, and also to show actual expected success.
        The old results said PASS with various obviously wrong results.

        * css3/viewport-percentage-lengths/viewport-percentage-lengths-relative-font-size.html: