@@ -1,5 +1,15 @@
 2014-05-31  Darin Adler  <darin@apple.com>
 
+        Fix test failure from the previous check-in.
+
+        * fast/dynamic/window-resize-scrollbars-test.html: Add resize handler so this test works
+        with asynchronous resizing.
+
+        * platform/wk2/TestExpectations: Expect failure for the test above; it's showing scrollbars,
+        and it should not. Before, the test was not running correctly so it seemed to pass.
+
+2014-05-31  Darin Adler  <darin@apple.com>
+
         Viewport percentage tests that resize the viewport are flaky
         https://bugs.webkit.org/show_bug.cgi?id=133351
 
